[package]
name = "ttc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" , features = ["std", "derive", "unstable", "alloc", "rc"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
error-stack = "0.2.4"
log = "0.4"
rayon = "1.6"
plotters = "0.3.3"