[package]
name = "ttc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" , features = ["std", "derive", "unstable", "alloc", "rc"] }
anyhow = "1.0.66"
log = "0.4"
rayon = "1.6"
plotters = "0.3.3"
clap = { version = "4.0.29", features = ["default", "unicode", "derive", "wrap_help", "env"] }
simd-json = { version = "0.7.0", features = ["hints", "default"] }
env_logger = "0.10.0"